demo-global-lb/k8s/asia.yaml
# ============================================================
# CỤM CHÂU Á - namespace asia-cluster
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: asia-cluster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-backend
  namespace: asia-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-backend
  template:
    metadata:
      labels:
        app: game-backend
    spec:
      containers:
        - name: game-backend
          image: game-server:latest
          imagePullPolicy: Never 
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: game-backend-svc
  namespace: asia-cluster
spec:
  type: ClusterIP
  selector:
    app: game-backend
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-backend-ingress
  namespace: asia-cluster
  # annotations:
  #   nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - asia.game.local
      secretName: asia-game-tls
  rules:
    - host: asia.game.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-backend-svc
                port:
                  number: 80
